--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Get ready for"
+            android:text="Starting workout in..."
             android:textAllCaps="true"
             android:textColor="@color/green"
             android:textSize="25sp"
@@ -33,7 +33,7 @@
         <FrameLayout
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/item_circular_color_accent_border" >
 
             <ProgressBar
