Adding different exercises to a list to be rcycled throughout the workout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#5B9941</color>
     <color name="bluishBlack">#2B3641</color>
     <color name="highlighted">#C4C4C4</color>
+    <color name="gold">#FFD700</color>
 </resources>
