--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -11,11 +11,13 @@
         layout="@layout/main_toolbar" />
 
     <LinearLayout
+        android:id="@+id/linearCountdown"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="visible"
+        tools:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +39,7 @@
             android:background="@drawable/item_circular_color_accent_border" >
 
             <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/countdownProgressBar"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 style="?android:attr/progressBarStyleHorizontal"
@@ -57,7 +59,79 @@
                 android:background="@drawable/item_circular_color_accent_background" >
 
                 <TextView
-                    android:id="@+id/timer"
+                    android:id="@+id/countdownTimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:text="10" />
+            </LinearLayout>
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearExercise"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exerciseToolbar" >
+
+        <ImageView
+            android:id="@+id/exerciseImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_wall_sit"
+            android:minWidth="100dp"
+            android:minHeight="100dp"
+            android:maxWidth="375dp"
+            android:maxHeight="375dp" />
+
+        <TextView
+            android:id="@+id/exerciseName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Workout"
+            android:layout_marginTop="20dp"
+            android:textAllCaps="true"
+            android:textColor="@color/green"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <FrameLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/item_circular_color_accent_border" >
+
+            <ProgressBar
+                android:id="@+id/exerciseProgressBar"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_gravity="center"
+                android:background="@drawable/circular_progress_gray"
+                android:indeterminate="false"
+                android:max="30"
+                android:progress="100"
+                android:progressDrawable="@drawable/circular_progress_bar"
+                android:rotation="-90" />
+
+            <LinearLayout
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/item_circular_color_accent_background" >
+
+                <TextView
+                    android:id="@+id/exerciseTimer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
