--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -17,13 +17,14 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="visible"
-        tools:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseToolbar" >
+        app:layout_constraintTop_toBottomOf="@+id/exerciseToolbar"
+        tools:visibility="visible">
 
         <TextView
+            android:id="@+id/introRestText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Starting workout in..."
@@ -36,13 +37,13 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/item_circular_color_accent_border" >
+            android:background="@drawable/item_circular_color_accent_border">
 
             <ProgressBar
                 android:id="@+id/countdownProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_gravity="center"
                 android:background="@drawable/circular_progress_gray"
                 android:indeterminate="false"
@@ -55,19 +56,40 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/item_circular_color_accent_background" >
+                android:background="@drawable/item_circular_color_accent_background"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/countdownTimer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="10"
                     android:textColor="@color/white"
                     android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:text="10" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </FrameLayout>
+
+        <TextView
+            android:id="@+id/upcomingExerciseText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Upcoming exercise:"
+            android:textAllCaps="true"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/upcomingExerciseName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="Exercise"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -77,28 +99,30 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exerciseToolbar" >
+        app:layout_constraintTop_toBottomOf="@+id/exerciseToolbar"
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/exerciseImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_wall_sit"
+            android:maxWidth="375dp"
+            android:maxHeight="375dp"
             android:minWidth="100dp"
             android:minHeight="100dp"
-            android:maxWidth="375dp"
-            android:maxHeight="375dp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/high_knees" />
 
         <TextView
             android:id="@+id/exerciseName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Workout"
             android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="Workout"
             android:textAllCaps="true"
             android:textColor="@color/green"
             android:textSize="22sp"
@@ -108,13 +132,13 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/item_circular_color_accent_border" >
+            android:background="@drawable/item_circular_color_accent_border">
 
             <ProgressBar
                 android:id="@+id/exerciseProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_gravity="center"
                 android:background="@drawable/circular_progress_gray"
                 android:indeterminate="false"
@@ -127,17 +151,17 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/item_circular_color_accent_background" >
+                android:background="@drawable/item_circular_color_accent_background"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/exerciseTimer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="10"
                     android:textColor="@color/white"
                     android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:text="10" />
+                    android:textStyle="bold" />
             </LinearLayout>
         </FrameLayout>
     </LinearLayout>
