--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="bluishBlack">#2B3641</color>
     <color name="highlighted">#C4C4C4</color>
     <color name="gold">#FFD700</color>
+    <color name="transGold">#80FFD700</color>
+    <color name="transWhite">#80FFFFFF</color>
 </resources>
